--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 	<!-- Sidebar Section -->
 	<aside id="addo-aside">
 		<!-- Logo -->
-		<div id="addo-logo"> <a href="#">ADDO<span>Adam Dornan</span></a> </div>
+		<div id="addo-logo"> <a href="#">Jerry<span>秋风大叔</span></a> </div>
 		<!-- Menu -->
 		<nav id="addo-main-menu">
 			<ul>
-				<li><a href="#home">Home</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="#news">News</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="#home">主页</a></li>
+				<li><a href="#about">关于</a></li>
+				<li><a href="#services">服务</a></li>
+				<li><a href="#portfolio">产品</a></li>
+				<li><a href="#news">新闻</a></li>
+				<li><a href="#contact">联系</a></li>
 			</ul>
 		</nav>
 		<!-- Sidebar Footer -->
@@ -42,7 +42,8 @@
 				<li><a href="#"><i class="ti-instagram font-14px white-icon"></i></a></li>
 				<li><a href="#"><i class="ti-linkedin font-14px white-icon"></i></a></li>
 			</ul>
-			<p><small>© 2019 ADDO by <a href="#">DuruThemes</a></small></p>
+			<p><small>© <a href="http://www.beian.miit.gov.cn/state/outPortal/loginPortal.action;jsessionid=5bagei2oi7ryxj7V0LqZmwHHFQNsgvflO8I8hnV-D_uczEwFs2L_!1525042486">京ICP备18010849号</a></small></p>
+			<p><small>© <a href="#">京公网安备</a></small></p>
 		</div>
 	</aside>
 	<!-- Main Section -->
@@ -66,13 +67,13 @@
 										<div class="slider-text-inner">
 											<div class="desc">
 												<div class="image_wrap"> <img src="images/adam.jpg" alt="" draggable="false"> </div>
-												<h1>ADAM DORNAN</h1>
+												<h1>秋风大叔</h1>
 												<h2 class="cd-headline clip">
-													<span>I'm</span>
+													<span>我是</span>
 													<span class="cd-words-wrapper" style="width: 68.6792px; overflow: hidden;">
-													  <b class="is-visible">&nbsp;Web Developer</b>
-													  <b class="is-hidden">&nbsp;Freelancer</b>
-													  <b class="is-hidden">&nbsp;Web Designer</b>
+													  <b class="is-visible">&nbsp;IOT从业者</b>
+													  <b class="is-hidden">&nbsp;自由职业者</b>
+													  <b class="is-hidden">&nbsp;IOT从业者</b>
 													</span>
 												</h2>
 											</div>
@@ -95,100 +96,60 @@
 			<div class="addo-about">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-12"> <span class="heading-meta">Information</span>
-							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">About Me</h2> </div>
+						<div class="col-md-12"> <span class="heading-meta">Who am I</span>
+							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">关于我</h2> </div>
 					</div>
 					<div class="row">
 						<div class="col-md-5"> <img src="images/about.jpg" class="img-fluid mb-30 animate-box" data-animate-effect="fadeInLeft" alt=""> </div>
-						<div class="col-md-7 animate-box" data-animate-effect="fadeInLeft"> <span class="heading-meta">ABOUT ME</span>
+						<div class="col-md-7 animate-box" data-animate-effect="fadeInLeft">
 							<h2 class="cd-headline clip">
-								<span>I'm Adam Dornan &amp; </span>
+								<span>我是秋风大叔 &amp; </span>
 								<span class="cd-words-wrapper" style="width: 54.7877px; overflow: hidden;">
-									<b class="is-visible">Web Developer</b>
-									<b class="is-hidden">Freelancer</b>
-									<b class="is-hidden">Web Designer</b>
+									<b class="is-visible">IOT从业者</b>
+									<b class="is-hidden">自由职业者</b>
+									<b class="is-hidden">IOT从业者</b>
 								</span>
 							</h2>
-							<p>Hi, My name is Adam Dornan. I am a Web Developer, and asellus tempus porttitor estnecer intiorer. Nulla facilisi. Nulla cursus velit et faucibus lobortis. In tincider diam metus tincede mollis aryi egestas quis. Nunc vitae felis lectus. Pellentesque imperdiet augue erat aliquer interdume turpis congue. Aliquam euismod turpis.</p>
+							<p>Hi，我叫秋风大叔，一名多年的IOT从业者, 以“为世界最大程度地建立人与物、物与物的连接与服务”为己任，专注于赋能智能硬件的通讯能力和提升云端数据应用和管理效率。</p>
 							<div class="addo-about-contact-wrap">
 								<div class="row">
 									<div class="col-md-6">
-										<p><b>Birthday:</b> 15 April 1990</p>
-										<p><b>Website:</b> www.dornan.com</p>
-										<p><b>Phone:</b> +1 650-444-0000</p>
+										<p><b>Website:</b> www.wimpykid.cn</p>
+										<p><b>Phone:</b> +86 18810100872</p>
 									</div>
 									<div class="col-md-6">
-										<p><b>Degree:</b> Master</p>
-										<p><b>Mail:</b> addo@dornan.com</p>
-										<p><b>Linkedin:</b> /adamdornan</p>
+										<p><b>Mail:</b> qiufeng@wimpykid.cn</p>
+										<p><b>Wechat:</b> 8755389</p>
 									</div>
 								</div>
 							</div>
-							<ul class="toolbar">
-							  <li><button class="btn">HIRE ME</button></li>
-							  <li><button class="btn">DOWNLOAD CV</button></li>
-							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- Skills Section -->
-		<div id="skills" class="section">
-			<div class="addo-skills">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-md-12"> <span class="heading-meta">Abilities</span>
-							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">My Skills</h2> </div>
-					</div>
-					<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<p>Suspendisse sit amet metus porta, egestas magna eget, ultricies enim. In libero justoner rhoncus eu nisl sed, pharetra luctus lorem. Praesent faucibus nibh nula necfermentum nunc rhoncus proin maximuster.</p>
-							<p> Quisque et nulla justo. Class aptent taciti sociosqu ad litora torquent per cobia nostra, per inceptos himenaeos. Mauris pulvinar faucibus dolory. Aenean dolry andapibus id lacinia a, posuere nec libero. Class aptent taciti sociosqu ad litora torquent per cobia nostra, per inceptos himenaeos.</p>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<p class="bar-title">Developer<span class="percent align-right">90%</span></p>
-							<div class="bar">
-								<div class="bar-fill bar-fill-developer start"></div>
-							</div>
-							<p class="bar-title">Photoshop<span class="percent align-right">80%</span></p>
-							<div class="bar">
-								<div class="bar-fill bar-fill-photoshop start"></div>
-							</div>
-							<p class="bar-title">Web Design<span class="percent align-right">95%</span></p>
-							<div class="bar">
-								<div class="bar-fill bar-fill-webdesign start"></div>
-							</div>
-							<p class="bar-title">Social Media<span class="percent align-right">85%</span></p>
-							<div class="bar">
-								<div class="bar-fill bar-fill-socialmedia start"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+
 		<!-- Services Section -->
 		<div id="services" class="section">
 			<div class="addo-services">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12"> <span class="heading-meta">What I Do</span>
-							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">Services</h2> </div>
+							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">服务</h2> </div>
 					</div>
 					<div class="row">
 						<div class="col-md-4">
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-laptop font-35px"></span> </div>
 								<div class="addo-text">
-									<h3>Web Desing</h3>
+									<h3>IOT</h3>
 									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
 								</div>
 							</div>
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-presentation font-35px"></span> </div>
 								<div class="addo-text">
-									<h3>Marketing</h3>
+									<h3>DTU&CPE</h3>
 									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
 								</div>
 							</div>
@@ -197,14 +158,14 @@
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-lightbulb font-35px"></span> </div>
 								<div class="addo-text">
-									<h3>Development</h3>
+									<h3>云协作</h3>
 									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
 								</div>
 							</div>
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-mobile font-35px"></span> </div>
 								<div class="addo-text">
-									<h3>Fully Responsive</h3>
+									<h3>企业云盘</h3>
 									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
 								</div>
 							</div>
@@ -213,14 +174,14 @@
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-camera font-35px"></span> </div>
 								<div class="addo-text">
-									<h3>Photography</h3>
+									<h3>项目开发</h3>
 									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
 								</div>
 							</div>
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-layers font-35px"></span> </div>
 								<div class="addo-text">
-									<h3>Art Direction</h3>
+									<h3>研发团队</h3>
 									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
 								</div>
 							</div>
@@ -229,50 +190,14 @@
 				</div>
 			</div>
 		</div>
-		<!-- References Section -->
-		<div id="references" class="section">
-			<div class="addo-references">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-md-12"> <span class="heading-meta">My Reference</span>
-							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">References</h2> </div>
-					</div>
-					<div class="row">
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<div class="team"> <img src="images/01.jpg" class="img-fluid" alt="">
-								<div class="desc">
-									<div class="con">
-										<h3>Jason Lee</h3> <span>AMM Company | CEO</span> </div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<div class="team"> <img src="images/02.jpg" class="img-fluid" alt="">
-								<div class="desc">
-									<div class="con">
-										<h3>Emily Sorey</h3> <span>RESOLVE |&nbsp;General Manager</span> </div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<div class="team"> <img src="images/03.jpg" class="img-fluid" alt="">
-								<div class="desc">
-									<div class="con">
-										<h3>Robert Luca</h3> <span>AKB | Software Team Lead</span> </div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+
 		<!-- Portfolio Section -->
 		<div id="portfolio" class="section">
 			<div class="addo-projects">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-12"> <span class="heading-meta">Portfolio</span>
-							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">Creative Works</h2> </div>
+						<div class="col-md-12"> <span class="heading-meta">What I have</span>
+							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">产品</h2> </div>
 					</div>
 					<div class="row">
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
@@ -280,7 +205,7 @@
 								<div class="project"> <img src="images/01(1).jpg" class="img-fluid" alt="">
 									<div class="desc">
 										<div class="con">
-											<h3>Mockup</h3> <span>Branding Desing</span> </div>
+											<h3>IOT</h3> <span>冷链IOT解决方案</span> </div>
 									</div>
 								</div>
 							</a>
@@ -290,7 +215,7 @@
 								<div class="project"> <img src="images/02(1).jpg" class="img-fluid" alt="">
 									<div class="desc">
 										<div class="con">
-											<h3>Book</h3> <span>Graphic Design</span> </div>
+											<h3>云协作</h3> <span>云盘解决方案</span> </div>
 									</div>
 								</div>
 							</a>
@@ -300,11 +225,12 @@
 								<div class="project"> <img src="images/03(1).jpg" class="img-fluid" alt="">
 									<div class="desc">
 										<div class="con">
-											<h3>Clock</h3> <span>Graphic Design</span> </div>
+											<h3>智通硬件</h3> <span>DTU&CPE</span> </div>
 									</div>
 								</div>
 							</a>
 						</div>
+						<!--Todo add more solutions and products in the future
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 							<a href="#" class="desc">
 								<div class="project"> <img src="images/04.jpg" class="img-fluid" alt="">
@@ -335,17 +261,20 @@
 								</div>
 							</a>
 						</div>
+						--Todo add more solutions and products in the future -->
+
 					</div>
 				</div>
 			</div>
 		</div>
+
 		<!-- News Section -->
 		<div id="news" class="section">
 			<div class="addo-blog">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-12"> <span class="heading-meta">Read</span>
-							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">LATEST NEWS</h2> </div>
+						<div class="col-md-12"> <span class="heading-meta">Latest news</span>
+							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">新闻</h2> </div>
 					</div>
 					<div class="row">
 						<div class="col-md-4 col-sm-4">
@@ -384,44 +313,20 @@
 			<div class="addo-contact">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-12"> <span class="heading-meta">Location</span>
-							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">Contact Me</h2> </div>
+						<div class="col-md-12"> <span class="heading-meta">Contact me</span>
+							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">联系</h2> </div>
 					</div>
 					<div class="row">
 						<!-- Contact Info -->
 						<div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInLeft">
-							<p><b>ADDO COMPANY INC.</b>
-								<br>Vivamus nec magna rhoncus felis faucibus printy.
-								<br>Faucibus printy nec magna rhoncus printy.</p>
-							<p>PHONE: +1 650-444-0000</p>
-							<p>FAX: +1 650-444-1234</p>
-							<p>EMAIL: info@addoinc.com</p>
-							<p>ADDRESS: 2 Curiosity Way, San Mateo, CA 94403, US.</p>
+							<p><b>汉卓信息技术（上海）有限公司</b>
+								<br>上海：嘉定区迎园中路622弄2号2085室
+								<br>北京：昌平区TBD住总万科天地2号楼617室</p>
+							<p>联系电话: +86 18810100872</p>
+							<p>联系邮箱: info@hzinfor.cn</p>
 						</div>
-						<!-- Contact Form -->
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<p><b>GET IN TOUCH</b></p>
-							<form method="post" class="row">
-								<div class="col-sm-6">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Name" required=""> </div>
-								</div>
-								<div class="col-sm-6">
-									<div class="form-group">
-										<input type="text" class="form-control" placeholder="Email"> </div>
-								</div>
-								<div class="col-sm-12">
-									<div class="form-group">
-										<textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Message"></textarea>
-									</div>
-								</div>
-								<div class="col-sm-12">
-									<div class="form-group">
-										<button class="btn" type="submit">Say Hello!</button>
-									</div>
-								</div>
-							</form>
-						</div>
+
+
 					</div>
 				</div>
 			</div>
@@ -431,10 +336,10 @@
 			<div class="addo-narrow-content">
 				<div class="row">
 					<div class="col-md-4 animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
-						<p class="addo-lead">Copyright &copy; 2019.Company name All rights reserved.</p>
+						<p class="addo-lead">Copyright &copy; 2020. Jerry Qiu All rights reserved.</p>
 					</div>
 					<div class="col-md-4 animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
-						<h2 class="text-center">ADDO<br><span>ADAM DORNAN</span></h2> </div>
+						<h2 class="text-center">JERRY<br><span>秋风大叔</span></h2> </div>
 					<div class="col-md-4 animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
 						<ul class="social-network">
 							<li><a href="#"><i class="ti-facebook font-14px black-icon"></i></a></li>
