完成个人网站搭建（Todo：公安备案号待后期添加）

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 				<li><a href="#"><i class="ti-linkedin font-14px white-icon"></i></a></li>
 			</ul>
 			<p><small>© <a href="http://www.beian.miit.gov.cn">京ICP备18010849号</a></small></p>
+			<!--Todo add in the future
 			<p><small>© <a href="#">京公网安备</a></small></p>
+			--->
 		</div>
 	</aside>
 	<!-- Main Section -->
@@ -143,14 +145,14 @@
 								<div class="addo-icon"> <span class="et-laptop font-35px"></span> </div>
 								<div class="addo-text">
 									<h3>IOT</h3>
-									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
+									<p>汉卓IOT解决方案包括智能终端、设备管理平台、业务管理平台等。该方案为冷链储存提供了更为先进和高效的管理方式。</p>
 								</div>
 							</div>
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-presentation font-35px"></span> </div>
 								<div class="addo-text">
 									<h3>DTU&CPE</h3>
-									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
+									<p>汉卓“M2M 4G DTU&CPE智能终端”, 支持虚拟卡（VSIM），提供4G LTE网络、WAN口接入有线网络，提供RS485或RS232接口连接其他主从设备，同时支持GPS/北斗卫星定位系统，可实时检测设备所处坐标。</p>
 								</div>
 							</div>
 						</div>
@@ -159,14 +161,14 @@
 								<div class="addo-icon"> <span class="et-lightbulb font-35px"></span> </div>
 								<div class="addo-text">
 									<h3>云协作</h3>
-									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
+									<p>一键上云：安全可靠、弹性灵活、按需付费，低成本快速开启企业数字化转型; 协同工作：多人协作、实时速达、同步共享、信息对称。</p>
 								</div>
 							</div>
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-mobile font-35px"></span> </div>
 								<div class="addo-text">
 									<h3>企业云盘</h3>
-									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
+									<p>新一代的企业网盘, 致力于为企业和组织提供企业级的文件存储、传输和协作能力, 通过优秀的Web端、移动端和桌面客户端结合策略驱动的混合云存储, 赋予企业用户随时、随地、跨设备进行文件同步和资源共享的能力。</p>
 								</div>
 							</div>
 						</div>
@@ -175,14 +177,14 @@
 								<div class="addo-icon"> <span class="et-camera font-35px"></span> </div>
 								<div class="addo-text">
 									<h3>项目开发</h3>
-									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
+									<p>汉卓始终以客户为中心，为客户提供专业的技术支持与服务，致力于为企业提供端到端的物联网及云服务定制解决方案。</p>
 								</div>
 							</div>
 							<div class="addo-feature animate-box" data-animate-effect="fadeInLeft">
 								<div class="addo-icon"> <span class="et-layers font-35px"></span> </div>
 								<div class="addo-text">
 									<h3>研发团队</h3>
-									<p>Fusce suscipit, ante a hendrerit thelery ullamcorper, risus nisl cursus purus the viverra ante nulla vel justo.</p>
+									<p>团队核心成员来自华为、思科和普华永道等知名大公司。汉卓以“为世界最大程度地建立人与物、物与物的连接与服务”为己任，专注于赋能智能硬件的通讯能力和提升云端数据应用和管理效率。</p>
 								</div>
 							</div>
 						</div>
@@ -201,7 +203,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<a href="#" class="desc">
+							<a href="http://www.hzinfor.cn/solutions/coldchain.html" class="desc">
 								<div class="project"> <img src="images/01(1).jpg" class="img-fluid" alt="">
 									<div class="desc">
 										<div class="con">
@@ -211,7 +213,7 @@
 							</a>
 						</div>
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<a href="#" class="desc">
+							<a href="http://www.hzinfor.cn/solutions/bubaocloud.html" class="desc">
 								<div class="project"> <img src="images/02(1).jpg" class="img-fluid" alt="">
 									<div class="desc">
 										<div class="con">
@@ -221,7 +223,7 @@
 							</a>
 						</div>
 						<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-							<a href="#" class="desc">
+							<a href="http://www.hzinfor.cn/solutions/cpedtu.html" class="desc">
 								<div class="project"> <img src="images/03(1).jpg" class="img-fluid" alt="">
 									<div class="desc">
 										<div class="con">
@@ -280,27 +282,27 @@
 						<div class="col-md-4 col-sm-4">
 							<div class="blog-entry animate-box" data-animate-effect="fadeInLeft">
 								<a href="#" class="blog-img"><img src="images/blog-05.jpg" class="img-fluid" alt=""></a>
-								<div class="desc"> <span>in <b><a href="#">LIFESTYLE</a></b></span>
-									<h3><a href="#">Responsive Desing</a></h3>
-									<p>Fusce suscipit, ante a hendrerit ullamcorper, risus nisl cursus purus, sit amet viverra ante nulla vel justo. Morbi justo erat, posuere vel libero non, bibendum convallis enim.</p>
+								<div class="desc"> <span>in <b><a href="https://yxz.xbubao.com">云协作</a></b></span>
+									<h3><a href="http://www.hzinfor.cn/news/bubaocloud.html">汉卓成为企业云盘服务供应商</a></h3>
+									<p> 成都中创云讯科技有限公司与汉卓信息技术（上海）有限公司结为战略合作伙伴，并授权汉卓具有布包云网盘产品及系列软件的销售和使用权。汉卓公司还拥有基于布包云软件进行二次开发的软件著作权以及提供布包云相关产品的技术服务。</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="blog-entry animate-box" data-animate-effect="fadeInLeft">
 								<a href="#" class="blog-img"><img src="images/blog-06.jpg" class="img-fluid" alt=""></a>
-								<div class="desc"> <span>in <b><a href="#">TRAVEL</a></b></span>
-									<h3><a href="#">Bootstrap Framework</a></h3>
-									<p>Fusce suscipit, ante a hendrerit ullamcorper, risus nisl cursus purus, sit amet viverra ante nulla vel justo. Morbi justo erat, posuere vel libero non, bibendum convallis enim.</p>
+								<div class="desc"> <span>in <b><a href="http://iot.hzinfor.cn">IOT</a></b></span>
+									<h3><a href="http://www.hzinfor.cn/news/nb-iot.html">汉卓成为NB-IOT物联网应用供应商</a></h3>
+									<p>2018年5月，汉卓信息技术（上海）有限公司组建NB-IOT物联网研发团队，联合北京软件团队，共同为企业提供E2E的物联网解决方案。一期规划产品为零售行业的冷柜云端控制提供全套解决方案，预计2018年底前产品上市。</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-4">
 							<div class="blog-entry animate-box" data-animate-effect="fadeInLeft">
 								<a href="#" class="blog-img"><img src="images/blog-02.jpg" class="img-fluid" alt=""></a>
-								<div class="desc"> <span>in <b><a href="#">LIFESTYLE</a></b></span>
-									<h3><a href="#">Animation Effects</a></h3>
-									<p>Fusce suscipit, ante a hendrerit ullamcorper, risus nisl cursus purus, sit amet viverra ante nulla vel justo. Morbi justo erat, posuere vel libero non, bibendum convallis enim.</p>
+								<div class="desc"> <span>in <b><a href="http://www.hzinfor.cn/news/cnsoft.html">项目开发</a></b></span>
+									<h3><a href="http://www.hzinfor.cn/news/cnsoft.html">汉卓成为企业云端应用软件供应商</a></h3>
+									<p>汉卓信息技术（上海）有限公司与华软汇智北京科技有限公司结为战略合作伙伴，共同开发并提供企业云端管理软件及服务。主要承接IOT领域，云协作领域企业定制需求开发，同时为客户在实际运营过程中遇到问题提供咨询。</p>
 								</div>
 							</div>
 						</div>
