--- a/index.html
+++ b/index.html
@@ -324,8 +324,9 @@
 							<p><b>汉卓信息技术（上海）有限公司</b>
 								<br>上海：嘉定区迎园中路622弄2号2085室
 								<br>北京：昌平区TBD住总万科天地2号楼617室</p>
+							<p>公司主页: <a href="http://www.hzinfor.cn">http://www.hzinfor.cn</a></p>
+							<p>联系邮箱: <a href="mailto:info@hzinfor.cn">info@hzinfor.cn</p>
 							<p>联系电话: +86 18810100872</p>
-							<p>联系邮箱: info@hzinfor.cn</p>
 						</div>
 
 
