完成个人网站搭建（Todo：公安备案号待后期添加）

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 								<br>上海：嘉定区迎园中路622弄2号2085室
 								<br>北京：昌平区TBD住总万科天地2号楼617室</p>
 							<p>公司主页: <a href="http://www.hzinfor.cn">http://www.hzinfor.cn</a></p>
-							<p>联系邮箱: <a href="mailto:info@hzinfor.cn">info@hzinfor.cn</p>
+							<p>联系邮箱: <a href="mailto:info@hzinfor.cn">info@hzinfor.cn</a></p>
 							<p>联系电话: +86 18810100872</p>
 						</div>
 
