--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12"> <span class="heading-meta">Who am I</span>
-							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">关于我</h2> </div>
+							<h2 class="addo-heading animate-box" data-animate-effect="fadeInLeft">关于</h2> </div>
 					</div>
 					<div class="row">
 						<div class="col-md-5"> <img src="images/about.jpg" class="img-fluid mb-30 animate-box" data-animate-effect="fadeInLeft" alt=""> </div>
