--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 		<!-- Sidebar Footer -->
 		<div class="addo-footer">
 			<ul>
+				<li><a href="mailto:info@hzinfor.cn"><i class="ti-email font-14px white-icon"></i></a></li>
 				<li><a href="#"><i class="ti-facebook font-14px white-icon"></i></a></li>
 				<li><a href="#"><i class="ti-twitter-alt font-14px white-icon"></i></a></li>
-				<li><a href="#"><i class="ti-instagram font-14px white-icon"></i></a></li>
 				<li><a href="#"><i class="ti-linkedin font-14px white-icon"></i></a></li>
 			</ul>
 			<p><small>© <a href="http://www.beian.miit.gov.cn">京ICP备18010849号</a></small></p>
@@ -345,9 +345,9 @@
 						<h2 class="text-center">JERRY<br><span>秋风大叔</span></h2> </div>
 					<div class="col-md-4 animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
 						<ul class="social-network">
+							<li><a href="mailto:info@hzinfor.cn"><i class="ti-email font-14px black-icon"></i></a></li>
 							<li><a href="#"><i class="ti-facebook font-14px black-icon"></i></a></li>
 							<li><a href="#"><i class="ti-twitter-alt font-14px black-icon"></i></a></li>
-							<li><a href="#"><i class="ti-instagram font-14px black-icon"></i></a></li>
 							<li><a href="#"><i class="ti-linkedin font-14px black-icon"></i></a></li>
 						</ul>
 					</div>
