--- a/index.html
+++ b/index.html
@@ -43,10 +43,7 @@
 				<li><a href="#"><i class="ti-linkedin font-14px white-icon"></i></a></li>
 			</ul>
 			<p><small>© <a href="http://www.beian.miit.gov.cn">京ICP备18010849号</a></small></p>
-			<p><small>© <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011402010581">京公网安备11011402010581号</a></small></p>
-			<div style="width:300px;margin:0 auto; padding:20px 0;">
-				<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011402010581" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="images/gongan.png" style="float:left;"/><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:">沪公网安备 31011402008649号</p></a>
-			</div>
+			<p><small>© <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011402010581"><img src="images/gongan.png" style="float:left;"/>京公网安备11011402010581号</a></small></p>
 		</div>
 	</aside>
 	<!-- Main Section -->
