--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<li><a href="#"><i class="ti-linkedin font-14px white-icon"></i></a></li>
 			</ul>
 			<p><small>© <a href="http://www.beian.miit.gov.cn">京ICP备18010849号</a></small></p>
-			<p><small>© <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011402010581"><img src="images/gongan.png" style="float:left;"/>京公网安备11011402010581号</a></small></p>
+			<p><small>© <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11011402010581">京公网安备11011402010581号</a></small></p>
 		</div>
 	</aside>
 	<!-- Main Section -->
